src/objects/ECommerce_Models__c.object
<CustomObject>
    <description>Model configurator for E-Commerce dashboard</description>
    <fields>
        <fullName>ATTRIBUTE10__c</fullName>
        <description>default warehouse code for sales model</description>
        <label>Warehouse Code</label>
        <picklist>
            <picklistValues>
                <fullName>US2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IE3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATTRIBUTE11__c</fullName>
        <description>sub-sub-category</description>
        <label>Model Category 3</label>
        <picklist>
            <picklistValues>
                <fullName>Clear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic TPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speakers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headphones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mono</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiglare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Charger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bumper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Band</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turbo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cut and Sew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waterproof</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rubber</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ATTRIBUTE1__c</fullName>
        <inlineHelpText>Used for service assurance dashboard</inlineHelpText>
        <label>Phone Carrier Code 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARRIER_CODE__c</fullName>
        <label>Phone Carrier Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARRIER_NAME__c</fullName>
        <label>Phone Carrier Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEY_ACCOUNT_SF_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Key Account</label>
        <referenceTo>Key_Account__c</referenceTo>
        <relationshipLabel>ECommerce Models</relationshipLabel>
        <relationshipName>ECommerce_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KEY_ACCOUNT__c</fullName>
        <formula>KEY_ACCOUNT_SF_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier Key Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODEL_DESC__c</fullName>
        <formula>MODEL_NUMBER_SF_ID__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODEL_NUMBER_SF_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.RecordTypeId</field>
                <operation>equals</operation>
                <value>MD</value>
            </filterItems>
            <filterItems>
                <field>Product2.PMD_Product__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>ECommerce Models</relationshipLabel>
        <relationshipName>ECommerce_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MODEL_NUMBER__c</fullName>
        <formula>MODEL_NUMBER_SF_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Number Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIQUE_MODEL_NUMBER__c</fullName>
        <label>Unique Model Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>ECommerce Models</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MODEL_NUMBER__c</columns>
        <columns>ATTRIBUTE2__c</columns>
        <columns>ATTRIBUTE3__c</columns>
        <columns>CARRIER_NAME__c</columns>
        <columns>CARRIER_CODE__c</columns>
        <columns>MODEL_DESC__c</columns>
        <columns>MODEL_NUMBER_SF_ID__c</columns>
        <columns>ATTRIBUTE5__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ECommerce Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Model_Number_Required</fullName>
        <active>true</active>
        <description>Model Number required to save</description>
        <errorConditionFormula>MODEL_NUMBER_SF_ID__c = &quot;&quot;</errorConditionFormula>
        <errorMessage>Model Number is required</errorMessage>
    </validationRules>
</CustomObject>